--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 Django==1.11.4
 django-filter==1.0.4
 djangorestframework==3.6.3
+djangorestframework-files==1.0.1
+mock==2.0.0
+pbr==3.1.1
 pytz==2017.2
+six==1.10.0
